<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:layout_gravity="center_vertical">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bmi_calculator"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLO1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightInKg"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etWeight"
            android:inputType="numberDecimal"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLO1"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeight"
            android:text="@string/heightInMeter"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etHeight"
            android:inputType="numberDecimal"
            android:layout_marginStart="0dp"/>
        </LinearLayout>

    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLO2"
        android:layout_centerInParent="true"
        android:layout_marginTop="14dp"
        android:text="@string/bmi_calculator" />

    <TextView
        android:id="@+id/tvBmiShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalculateBMI"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginStart="77dp"
        android:layout_marginTop="45dp"
        android:text="@string/your_bmi"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etShowBmi"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculateBMI"
        android:layout_alignEnd="@id/tvBmiShow"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:inputType="numberDecimal"
        tools:ignore="TextViewEdits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_bmi_category_appears_here"
        android:id="@+id/BMI_Cat"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tvBmiShow"
        />


</RelativeLayout>